--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "RandomSkins",
     "version_number": "1.0.0",
-    "website_url": "",
+    "website_url": "https://github.com/VinceWasHere/Random-Skins",
     "description": "For the time being, just a Zenitsu skin for Mercenary. Enjoy!",
     "dependencies": [
     "bbepis-BepInExPack-5.4.9"
